<resources>
    <string name="internet_not_available">Internet Connection Problem</string>
    <string name="try_again">Try Again !</string>
    <string name="location_not_supported"> Coming soon !</string>
    <string name="click_the_drop_down">Select</string>
    <string name="select_your_city">Select Your City</string>
    <string name="select_your_area">Select Your Area</string>
    <string name="app_name">Deligoo</string>
    <string name="subtitle">location..</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shopname">Apple Store 117 New Delhi India</string>
    <string name="shopitem">iPhone , iPad , iMac , Apple Watch , MacBook , MacPro </string>
    <string name="categoryofshop">Apple Product\'s</string>
    <string name="numberofshop">1007</string>
    <string name="categoryitem">iPhone , iPad , iMac , Apple Watch , MacBook , MacPro </string>
    <string name="serchboxhint">Search Shop\'s </string>
    <string name="status">Open</string>
    <string name="shoppagetext">iPhone 7</string>
    <string name="shopcaption">This is the first Apple store in the history of planet to be powered by virtual reality to give it\'s customer a better experience</string>
    <string name="title_activity_shoppage">shoppage</string>
    <string name="urlofshoppage">url</string>
    <string name="shopstatus">Open</string>
    <string name="rate">Rate the Shop </string>
    <string name="rated">Shop Rating</string>
    <string name="shopuserreview">User\'s Review</string>
    <string name="done">DONE</string>
    <string name="spinnerforcity">Select your City</string>
    <string name="spinnerforarea">Select your Area</string>
    <string name="termandcondition">Privacy Policy and Terms and Conditions</string>
    <string name="agree">By continuing you agree to the</string>
    <string name="existinguser">Existing user \? LOGIN</string>
    <string name="shoppagedetalofsomeitem">This is the first Apple store in the history of planet to be powered by virtual reality to give it\'s customer a better experience.Story of Apple -Story begin from Adam go through Newton and now in hand of Tim ,and ya there is no sign of End.</string>
    <string name="title_activity_shoplist">shoplist</string>
    <string name="title_activity_subshopcategory">subshopcategory</string>
    <string name="title_activity_firstpage">firstpage</string>
    <string name="ip">52.25.131.232:8080</string>
    <string name="gcm_appid">406549326070</string>
    <string name="google_app_id">406549326070</string>
    <string name="next">Next</string>
    <string name="title_activity_sms_varification">SmsVarification</string>
    <string name="login">Login</string>
    <string name="varification">Sms Varification is all new way to get login </string>
    <string name="countrycode">+91</string>
    <string name="enteryourmobilenumber">Enter mobile number</string>
    <string name="gpslocationtext">Near you</string>
    <string name="title_activity_search">Search</string>
    <string name="searchHint">Search  items and  shops </string>
    <string name="searchHint2">Search shops by name </string>
    <string name="searchLabel">Search</string>
    <string name="are_you_a_shop">Are you a shop </string>
    <string name="favourites">Favourites</string>
    <string name="call_log">Call Log</string>
    <string name="messsge_log">Message Log</string>
    <string name="notification_point">Notification Point</string>
    <string name="subscribe">Subscribe</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact</string>
    <string name="submit_query">Submit Query</string>
    <string name="rate_us">Rate Us</string>
    <string name="social_connections">Social Media</string>
    <string name="who_we_are">Who We Are</string>
    <string name="our_ambitious_ambition">Our Ambition</string>
    <string name="offers">Offer\'s</string>
    <string name="share">Share</string>
    <string name="open_of_navigation_view_slider">Open</string>
    <string name="close_of_navigation_view_slider">Close</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_help_description">HelpDescriptionActivity</string>
    <string name="title_activity_license">License</string>
    <string name="title_activity_offer">Offer</string>
    <string name="title_activity_marked">Marked</string>
    <string name="title_activity_log_">Log_Activity</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="send_to">Send To</string>
    <string name="hint_to_message">Send Message to shop for FREE!</string>
</resources>
