<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adslinearlayout"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativelayouthorizantalscroll"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/black"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="top"
            >
            <TextView
                android:id="@+id/textshopname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:textSize="10sp"
                android:gravity="top|start|left"
                android:textColor="@android:color/white"
                android:text="@string/shopname"
                />



        </LinearLayout>
        <LinearLayout
            android:gravity="bottom"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/textshopid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:textSize="10sp"
                android:gravity="top|center_horizontal"
                android:textColor="@android:color/white"
                android:text="@string/shopname"
                />

            <TextView
                android:id="@+id/textshopcaption"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="10sp"
                android:gravity="center_horizontal|top"
                android:textColor="@android:color/white"
                android:text="@string/shopcaption"
                android:layout_marginLeft="2dp"
                />
            <TextView
                android:id="@+id/textitem"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/white"
                android:text="@string/shopitem"
                android:layout_marginLeft="2dp"
                />
        </LinearLayout>
    </RelativeLayout>



</LinearLayout>