<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.muditi.omoyo.firstpage"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appcolor"
    android:id="@+id/relativelayout_parent_first_page"
    >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:background="@android:color/transparent"
                      >
               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:fitsSystemWindows="true"
                      >
                <LinearLayout
                    android:id="@+id/parentlinearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:fitsSystemWindows="true"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_vertical|center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/linearlayoutfooter"
            android:layout_marginTop="10dp"
            >
        <LinearLayout
            android:id="@+id/linearlayoutforlocation"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical"
            android:background="@drawable/firstpagelocation"
            android:visibility="invisible"
            >
            <com.rey.material.widget.Spinner
                style="@style/Material.Widget.Spinner"
                android:id="@+id/spinnerforcity"
                android:layout_width="match_parent"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:layout_height="0dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                app:spn_arrowSize="7dp"
                app:spn_arrowColor="@color/appcolor"
                android:layout_weight="1"
                android:popupBackground="@color/firstpageareaselect"
                app:spn_dividerColor="@color/appcolor"
                app:spn_dividerHeight="3dp"
                app:spn_arrowAnimClockwise="true"
                app:spn_label="@string/select_your_city"
                app:spn_labelTextColor="@android:color/white"
                app:spn_labelTextSize="15dp"
                app:spn_labelEnable="true"
                >


            </com.rey.material.widget.Spinner>

            <com.rey.material.widget.Spinner
                style="@style/Material.Widget.Spinner"
                app:rd_style="@style/Material.Drawable.Ripple.Wave"
                android:layout_marginTop="15dp"
                android:id="@+id/spinnerforarea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                app:spn_arrowSize="7dp"
                app:spn_arrowColor="@color/appcolor"
                android:layout_weight="1"
                android:popupBackground="@color/firstpageareaselect"
                app:spn_dividerColor="@color/appcolor"
                app:spn_dividerHeight="3dp"
                app:spn_arrowAnimClockwise="true"
                app:spn_label="@string/select_your_area"
                app:spn_labelTextColor="@android:color/white"
                app:spn_labelTextSize="15dp"
                app:spn_labelEnable="true"
                >

            </com.rey.material.widget.Spinner>
            <com.rey.material.widget.Button
                android:id="@+id/doneselectingarea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:rd_enable="true"
                android:text="@string/done"
                android:textSize="30sp"
                android:background="@null"
                android:visibility="gone"
                android:textColor="@android:color/white"
                />

            <com.rey.material.widget.ProgressView
                android:id="@+id/process_bar_for_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:pv_circular="false"
                app:pv_autostart="true"
                app:pv_progressStyle="@style/LinearProgress"
                app:lpd_strokeColor="@array/rainbow"
                app:lpd_verticalAlign="center"
                app:pv_progressMode="indeterminate"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="bottom|center_horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="vertical"
                android:gravity="bottom"
                >
                <com.rey.material.widget.ProgressView
                    android:id="@+id/processbarfirstpagenetwork"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:pv_circular="true"
                    app:pv_autostart="true"
                    app:pv_progressStyle="@style/CircularProgress"
                    />
                <LinearLayout
                    android:id="@+id/linearlayoutfirstpagetermandcondition"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:layout_weight="2">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@null"
                        android:text="@string/existinguser"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:layout_gravity="top|center_horizontal"
                        android:gravity="top|center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/button_for_existing_user"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:background="@null"
                            android:text="@string/agree"
                            android:textColor="@android:color/white"
                            android:textSize="13sp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            android:layout_marginBottom="10dp"
                            android:clickable="false"
                            />
                        <Button
                            android:id="@+id/button_for_term_and_condition"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:background="@null"
                            android:text="@string/termandcondition"
                            android:textColor="@android:color/white"
                            android:textSize="13sp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center_horizontal|center_vertical"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/gpsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@android:color/transparent"
        android:src="@mipmap/ic_location_on_white_48dp"
        android:clickable="true"
        app:elevation="0dp"
        app:borderWidth="0dp"
        app:layout_anchorGravity="top|end"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        android:text="@string/gpslocationtext"
        android:layout_marginRight="10dp"
        android:layout_alignBottom="@+id/gpsLocation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="right|bottom"
        />

</RelativeLayout>