<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="220dp"
    android:background="@null"
    >
    <ImageView
        android:id="@+id/offerposterlinearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
         />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_view_for_notification_item_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/text_view_for_notification_item_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/offerDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shopcaption"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/text_view_for_notification_item_offer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                />
            <TextView
                android:id="@+id/text_view_for_notification_item_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/offers"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>